Fix link again and copyright alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,6 @@ h1{
 h2{
   color:gray;
 }
-.copyright{
+#copyright{
   text-align: right;
 }
